# master_thesis

./: .gitignore  README.md
modelling/: .RData  .Rhistory  run_model.R  run_model_1.R  run_model_2.R  run_model_3.R
modelling/data/: high_tc_clean.csv
modelling/model_1/: model.R  setprm.R
modelling/model_1_sigmoid/: model.R  setprm.R
modelling/model_2/: Untitled.R  model.R  model_both_scaled.R  model_both_scaled_cold_start.R  model_first_scaled.R  model_second.R  setprm.R  setprm_old.R  setprm_right.R  setprm_scaled.R  setprm_scaled_col_start.R  setprm_scaled_og_init.R
modelling/model_2_sigmoid/: model_both.R  model_first.R  setprm.R
modelling/model_3/: model.R  setprm.R
modelling/model_4/: model.R  setprm.R
modelling/src/: ldf.R  leaveOneOut.R  prep.R  sourceFunctions.R  tools.R  yum_tools.R
switching_time_optimization/: import_fix.py
switching_time_optimization/control/: color_loader.py  data.py  model_loader.py  objective_functions.py  price_loader.py  tools.py
switching_time_optimization/control/ann/: dense_nets.py  losses.py  train_ann_og.py  train_ann_rk.py
switching_time_optimization/control/ann/trained_networks/: best_model_og_lossl2  best_model_og_lossmse  best_model_rk_switchtype_dap  best_model_rk_switchtype_rk
switching_time_optimization/control/auto_runs/: bash_test_long_term.sh  bash_test_long_term_combined.sh  bash_test_long_term_dayahead.sh  bash_test_long_term_rk.sh  bash_test_ns.sh  bash_test_ns_combined.sh  bash_test_ns_dayahead.sh  bash_test_ns_rk.sh  simulate_mpc_combined.py  simulate_mpc_dayahead.py  simulate_mpc_dayahead_reuse_switch.py  simulate_mpc_og_jupyter.ipynb  simulate_mpc_pure_dap.py  simulate_mpc_pure_dap_reuse_switch.py  simulate_mpc_rk.py  simulate_mpc_rk_reuse.py
switching_time_optimization/control/notebooks/: evaluate_ann_combined.ipynb  evaluate_ann_training_dayahead.ipynb  evaluate_long_term_combined.ipynb  evaluate_long_term_dayahead.ipynb  evaluate_long_term_no_diffusion_combined.ipynb  evaluate_long_term_no_diffusion_dayahead.ipynb  evaluate_n_combined.ipynb  evaluate_n_s_dayahead.ipynb  model_simulation.ipynb  simulate_NNMPC_l2_dayahead.ipynb  simulate_NNMPC_mse_combined.ipynb  simulate_NNMPC_mse_dayahead.ipynb  sketch_plots.ipynb
switching_time_optimization/control/switching-times/: CMakeLists.txt  main_1st.cpp  main_1st_rk.cpp  main_2nd_order.cpp  main_2nd_rk.cpp  main_3rd_order.cpp  main_3rd_rk.cpp  setup.py
switching_time_optimization/control/switching-times/py/: cxx-2-py-example-ice-tank-simple.ipynb  cxx-2-py-example.ipynb
switching_time_optimization/control/switching-times/src/: cppad-eigen-odeint.hpp  cppad-eigen.hpp  switching-times-example.cpp  switching-times-ice-tank-2ndorder.cpp  switching-times-ice-tank-2ndorder_rk.cpp  switching-times-ice-tank-3rdorder.cpp  switching-times-ice-tank-3rdorder_rk.cpp  switching-times-ice-tank-simple-rk.cpp  switching-times-ice-tank-simple.cpp  switching-times-rk-chance.hpp  switching-times-rk.cpp  switching-times-rk.hpp  switching-times.cpp  switching-times.hpp
switching_time_optimization/models/: models.py
